ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Nominations__c/Nominations__c.object-meta.xml
<CustomObject>
    <description>Leading Change Award Nominations</description>
    <label>Nominations</label>
    <nameField>
        <displayFormat>LCA2014-{00}</displayFormat>
        <label>Nominations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Nominations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>