ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Nominations__c/fields/Nomination_Description__c.field-meta.xml
<CustomField>
    <fullName>Nomination_Description__c</fullName>
    <description>Please tell us why you are nominating this organization (500 characters max).</description>
    <label>Nomination Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>