ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Nominations__c/fields/Nominator__c.field-meta.xml
<CustomField>
    <fullName>Nominator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person nominating organization.</description>
    <label>Nominator</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Nominations</relationshipLabel>
    <relationshipName>Nominations</relationshipName>
    <type>Lookup</type>
</CustomField>