ShakeCharity/ShakeSharityApp/force-app/main/default/objects/Nominations__c/fields/Organization_Nominated__c.field-meta.xml
<CustomField>
    <fullName>Organization_Nominated__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organization Nominated</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Nominations</relationshipLabel>
    <relationshipName>Nominations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>